--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 
-*main.css.map
+dist/css/main.css.map
 design
 style-guide.md
 .vscode
